# KinectFramework

./: .dropbox  README.md
1 - Instalação/: Code::Blocks configuration.txt
1 - Instalação/Linux/PCL + OpenNI + Kinect/: ni.sh
1 - Instalação/Linux/PCL + OpenNI2 + Kinect/: install-all.sh
1 - Instalação/Windows/: 03-Configuracoes.txt
2 - Exemplos implementação/1 - Entrada e saída/1 - Lendo de arquivo PCD/: CMakeLists.txt
2 - Exemplos implementação/1 - Entrada e saída/3 - Salvando nuvem de pontos aleatória/: CMakeLists.txt  Project.depend  Project.layout
2 - Exemplos implementação/2 - Visualização/1 - Visualizando nuvem/: .project  CMakeLists.txt  Project.cbp  Project.depend  Project.layout  main.cpp
2 - Exemplos implementação/2 - Visualização/1 - Visualizando nuvem/Debug/: main.d  makefile  objects.mk
2 - Exemplos implementação/2 - Visualização/1 - Visualizando nuvem/Debug/src/: Calculations.d  Filtering.d  IO.d  KinectControl.d  Object.d  Processing.d  Recognition.d  Reconstruction.d  Registering.d  SegmentationAlgorithms.d  Transformations.d  Viewer.d
2 - Exemplos implementação/2 - Visualização/1 - Visualizando nuvem/Release/src/: subdir.mk
2 - Exemplos implementação/2 - Visualização/1 - Visualizando nuvem/src/: main.cpp
4 - Artigo/: estudodapcl.aux  estudodapcl.tex  sbc-template.aux  sbc-template.bib
5 - Results/: Pictures.rar
6 - Presentation/patterns-sos-reconfiguration/: sesos2015.tex
Implementation/: README.txt
Implementation/5 - Cálculos/Normal/: Project.cbp
Installation/: Eclipse configuration.txt
Installation/Linux/: README.txt
(+135 files in other folders)
